# lcov

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  README.tpl  release.sh  rustfmt.toml
.github/workflows/: cargo-release.yml  ci.yml  rust-ci.yml
benchsuite/: Makefile
lcov/: Cargo.toml  README.md  README.tpl  release.sh
lcov/src/: helper.rs  lib.rs  line_filter.rs  reader.rs
lcov/src/filter/: line_num.rs  mod.rs
lcov/src/record/: display.rs  mod.rs  parse.rs  tests.rs
lcov/src/report/: error.rs  mod.rs  parser.rs
lcov/src/report/section/: branch.rs  branch_list.rs  func_list.rs  function.rs  line.rs  line_list.rs  mod.rs
lcov/tests/: lcov.rs  readme.rs
lcov/tests/fixtures/: report.filtered.info  report.run.info  report_checksum.info  report_checksum.run.info
lcov/tests/fixtures/src/: fizzbuzz.c  main.c
src/: lib.rs  line_filter.rs  merger.rs  reader.rs  report.rs
src/record/: display.rs  mod.rs  parse.rs  tests.rs
src/report/: mod.rs  parser.rs
src/report/section/: branch_list.rs  func_list.rs  line_list.rs  mod.rs
tests/: lcov_filter.rs  lib.rs  version_number.rs
tests/fixtures/: Makefile  report.checksum.init.info  report.info
tests/fixtures/src/: div.c  main.h  mul.c
