[workspace]
members = ["lcov"]

[package]
name = "lcov-util"
version = "0.1.9"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Utility commands to operate and analyze LCOV trace file at blazingly fast."
readme = "README.md"
keywords = ["lcov", "coverage", "gcov"]
categories = ["command-line-utilities", "parsing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gifnksm/lcov/"
edition = "2018"

[dependencies]
lcov = { version = "0.7", path = "lcov" }
structopt = "0.3.26"

[dev-dependencies]
version-sync = "0.9.4"
