[workspace]
members = ["lcov"]

[package]
name = "lcov-util"
version = "0.1.9"
edition = "2021"
rust-version = "1.56.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Utility commands to operate and analyze LCOV trace file at blazingly fast."
readme = "README.md"
keywords = ["lcov", "coverage", "gcov"]
categories = ["command-line-utilities", "parsing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gifnksm/lcov/"

[dependencies]
lcov = { version = "0.8", path = "lcov" }
structopt = "0.3.26"

[dev-dependencies]
version-sync = "0.9.4"

[package.metadata.release]
pre-release-replacements = [
    { file = "dist/pkgbuild/PKGBUILD", search = "pkgver=[0-9\\.]+", replace = "pkgver={{version}}" },
    { file = "dist/pkgbuild/PKGBUILD", search = "pkgrel=[0-9\\.]+", replace = "pkgrel=1" },
]
pre-release-hook = ["cargo", "test", "--workspace"]
