[workspace]
members = ["lcov"]

[package]
name = "lcov-util"
version = "0.2.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Utility commands to operate and analyze LCOV trace file at blazingly fast."
readme = "README.md"
keywords = ["lcov", "coverage", "gcov"]
categories = ["command-line-utilities", "parsing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gifnksm/lcov/"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
lcov = { version = "0.8", path = "lcov" }

[dev-dependencies]
version-sync = "0.9.5"

[package.metadata.release]
pre-release-replacements = [
    { file = "dist/pkgbuild/PKGBUILD", search = "pkgver=[0-9\\.]+", replace = "pkgver={{version}}" },
    { file = "dist/pkgbuild/PKGBUILD", search = "pkgrel=[0-9\\.]+", replace = "pkgrel=1" },
]
pre-release-hook = ["cargo", "test", "--workspace"]
