[package]
name = "lcov"
version = "0.7.2"
edition = "2021"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "LCOV tracefile parser/merger/filter in pure Rust."
readme = "README.md"
keywords = ["lcov", "coverage", "gcov"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gifnksm/lcov/"

[dependencies]
thiserror = "1.0.31"

[dev-dependencies]
glob = "0.3.0"
matches = "0.1.9"
version-sync = "0.9.4"
cargo-readme = "3.2.0"
