[package]
name = "lcov"
version = "0.8.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "LCOV tracefile parser/merger/filter in pure Rust."
readme = "README.md"
keywords = ["lcov", "coverage", "gcov"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
repository = "https://github.com/gifnksm/lcov/"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
thiserror = "2.0.3"

[dev-dependencies]
glob = "0.3.1"
matches = "0.1.10"
version-sync = "0.9.5"
cargo-readme = "3.3.1"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "lcov = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "^//! lcov = \"[0-9\\.]+\"", replace = "//! lcov = \"{{version}}\"" },
    { file = "src/lib.rs", search = "^#!\\[doc\\(html_root_url = \"https://docs.rs/lcov/[0-9\\.]+\"\\)\\]", replace = "#![doc(html_root_url = \"https://docs.rs/lcov/{{version}}\")]" },
]
pre-release-hook = ["cargo", "test"]
